# HomeWork_10_1

./: .coverage  .gitignore  README.md  pyproject.toml  setup.cfg
src/: generators.py  main.py  masks.py  processing.py  widget.py
tests/: conftest.py  test_gen.py  test_masks.py  test_processing.py  test_widget.py  tests_generator.py  отчет о тестировании  отчет о тестировании 2
