[tool.black]
line-length = 119
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
/(
   \.eggs
   \.git
   \.venv
   _build
)/
'''

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.isort]
add_imports = ["import os"]

[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["gulnaramari <gulnaramari@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
google-api-python-client = "^2.136.0"
isodate = "^0.6.1"
pytest = "^8.3.1"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.0"
mypy = "^1.10.1"
isort = "^5.13.2"
black = "^24.4.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
pytest = "^8.3.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
