[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = "домашнее задание 10.2"
authors = ["gulnaramari <gulnaramari@yandex.ru>"]
license = "MIT"

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
mypy = "^1.11.1"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"



[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.flake8]
line_length = 119

[tool.isort]
multi_line_output = 3
line_length = 119
include_trailing_comma = true


[tool.black]
line-length = 119
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
/(
   \.eggs
   \.git
   \.venv
   _build
)/
'''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
